--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,20 @@ body{
     display: none;
     z-index: 10000;
 }
+
+.navbar {
+    background-color:  transparent;
+    z-index: 1;
+}
+
+    .top-nav-collapse {
+    background-color: #4285F4;
+}
+
+@media only screen and (max-width: 768px) {
+    .navbar{
+        background-color: #4285F4;
+    }
+    
+
+}
