dodanie 2 komponentow i podbicie cli

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,17 +3,17 @@
 
 <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar intro-fixed-nav" [containerInside]="false">
         <logo>
-            <a class="logo navbar-brand" href="#"><strong>Qumi Soft Jakub Kumięga</strong></a>
+            <a class="logo navbar-brand" href="#"><img src="../../assets/img/logo.png" class="logo-img"></a>
         </logo>
         <links>
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active waves-light" mdbRippleRadius>
-                    <a class="nav-link" href="#top" mdbPageScroll [pageScrollDuration]="1000">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item waves-light" mdbRippleRadius routerLinkActive="active">
+                    <a class="nav-link" href="#top" mdbPageScroll [pageScrollDuration]="1000" >Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item waves-light" mdbRippleRadius>
+                <li class="nav-item waves-light" mdbRippleRadius routerLinkActive="active">
                     <a class="nav-link" href="#about" mdbPageScroll [pageScrollDuration]="1000">O nas</a>
                 </li>
-                <li class="nav-item waves-light" mdbRippleRadius>
+                <li class="nav-item waves-light" mdbRippleRadius routerLinkActive="active">
                     <a class="nav-link" href="#contact" mdbPageScroll [pageScrollDuration]="1000">Kontakt</a>
                 </li>
             </ul>
@@ -28,7 +28,7 @@
                     <div class="row smooth-scroll">
                         <div class="col-md-12">
                             <div class="white-text text-center">
-                                <h2 class="display-3 font-bold font-up yellow-text mb-4 wow animated fadeIn" style="animation-name: none; visibility: visible;">Qumi Soft Jakub Kumięga</h2>
+                                <h2 class="display-3 black-text font-bold font-up mb-4 wow animated fadeIn" style="animation-name: none; visibility: visible;"><strong class="blue-text">Q</strong>umi<strong class="red-text">Soft</strong>Jakub Kumięga</h2>
                                 <h3 class="mt-2 mb-4 wow animated fadeIn" data-wow-delay="0.5s" style="animation-name: none; visibility: visible;">AMBICJA jest pierwszym krokiem do sukcesu</h3>
                             </div>
                         </div>
@@ -68,14 +68,12 @@
                         </h3>
 
                         <!-- Description -->
-                        <p align="justify" class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo animi soluta ratione quisquam, dicta
-                            ab cupiditate iure eaque? Repellendus voluptatum, magni impedit delectus, beatae maxime temporibus
-                            maiores quibusdam.</p>
-                        <p align="justify" class="grey-text">Rem magnam ad perferendis iusto sint tempora ea voluptatibus iure, animi excepturi modi aut possimus
-                            in hic molestias repellendus illo ullam odit quia velit. Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit.</p>
-                        <p align="justify" class="grey-text mb-5">Incidunt eligendi mollitia labore ipsum ex fugit explicabo saepe error neque beatae in, expedita
-                            eveniet quae aliquam assumenda voluptatibus!</p>
+                        <p align="justify" class="grey-text">Od samego początku naszej działalności naszym celem było zaspokojenie potrzeb naszych Klientów. Bez względu na to czy tworzymy stronę www, promujemy Cię w Internecie czy prowadzimy rozliczenia Twojej działalności medycznej z Narodowym Funduszem Zdrowia, zawsze możesz liczyć na nasze pełne zaangażowania podejście.</p>
+
+                            <p align="justify" class="grey-text">Cieszymy się, że nasza praca znajduje uznanie wśród naszych klientów. Jednocześnie tych z Państwa, którzy nie znają naszej firmy zachęcamy do zapoznania się z naszą ofertą i przeanalizowaniem możliwości współpracy.</p>
+                            
+                            <p align="justify" class="grey-text">Grono naszych zadowolonych klientów stale się powiększa.
+                            Zapraszamy do nich i Państwa</p>
 
                     </div>
                     <!-- Grid column -->
@@ -232,7 +230,7 @@
         <section id="contact" class="section pt-3 pb-5 mb-5">
            <h2 class="text-center font-up font-bold mt-4 mb-5 py-5 wow fadeIn" data-wow-delay="0.2s" style="animation-name: none; visibility: visible;">Kontakt</h2>
             <!--Section: Contact v.2-->
-                        <div class="row wow fadeInUp">
+                        <div class="row wow fadeIn">
 
                             <!--Grid column-->
                             <div class="col-md-8 col-xl-9">
