--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -23,3 +23,18 @@ h6 {
     color: #757575;
 }
 
+.blue-text{
+    color:blue;
+}
+
+.red-text{
+    color:red;
+}
+
+.black-text{
+    color:#111;
+}
+
+.logo-img{
+    width:80px;
+}
