obsługa dynamicznie pobieranej treści

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div id="klepsydra">
+    <mdb-spinner spinnerType="big" spinnerColor="blue"></mdb-spinner>
+</div>
 <router-outlet></router-outlet> 
