--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -68,12 +68,7 @@
                         </h3>
 
                         <!-- Description -->
-                        <p align="justify" class="grey-text">Od samego początku naszej działalności naszym celem było zaspokojenie potrzeb naszych Klientów. Bez względu na to czy tworzymy stronę www, promujemy Cię w Internecie czy prowadzimy rozliczenia Twojej działalności medycznej z Narodowym Funduszem Zdrowia, zawsze możesz liczyć na nasze pełne zaangażowania podejście.</p>
-
-                            <p align="justify" class="grey-text">Cieszymy się, że nasza praca znajduje uznanie wśród naszych klientów. Jednocześnie tych z Państwa, którzy nie znają naszej firmy zachęcamy do zapoznania się z naszą ofertą i przeanalizowaniem możliwości współpracy.</p>
-                            
-                            <p align="justify" class="grey-text">Grono naszych zadowolonych klientów stale się powiększa.
-                            Zapraszamy do nich i Państwa</p>
+                        <p align="justify" class="grey-text"><app-wraper-component [idKontenera]="24" [idPage]="1"></app-wraper-component></p>
 
                     </div>
                     <!-- Grid column -->
@@ -391,6 +386,8 @@
         <a href="https://kumi20.webd.pl">Qumi Soft Jakub Kumięga</a>
     </div>
     <!--/.Copyright-->
+
+   
 
 </footer>
 <!--/.Footer-->
