--- a/src/app/template/mapy/mapy.component.html
+++ b/src/app/template/mapy/mapy.component.html
@@ -14,7 +14,7 @@
                       >
 
                     <agm-info-window>
-                      <div [innerHTML]="m.description"></div>
+                      <div [innerHTML]="m.description" style="color: black"></div>
                     </agm-info-window>
 
                   </agm-marker>
