--- a/src/app/template/cform/cform.component.html
+++ b/src/app/template/cform/cform.component.html
@@ -64,7 +64,7 @@
                 </div>
                 <!--Grid row-->
                 <div class="center-on-small-only">
-                    <button class="btn btn-primary waves-light" mdbRippleRadius type="submit">Wyślij</button>
+                    <button class="btn btn-outline-success btn-rounded waves-effect" mdbRippleRadius type="submit">Wyślij</button>
                 </div>
             </form>
 
@@ -72,7 +72,43 @@
         </div>
         <!--Grid column-->
 
-       
+       <!--Grid column-->
+                            <div class="col-md-4 col-xl-3">
+                                  <!--Grid row-->
+    <div class="row text-center">
+
+        <!--Grid column-->
+                        <div class="col-lg-12 col-md-12 mb-r">
+
+                            <div class="avatar">
+                                <img src="../../assets/img/thumbnail_144x144.jpeg" class="rounded-circle z-depth-1" alt="First sample avatar image">
+                            </div>
+                            <h4 style="margin-top:20px;">Jakub Kumięga</h4>
+                            <h6 class="font-bold blue-text">Web Designer</h6>
+                                        <!--Facebook-->
+                            <a href="https://www.facebook.com/jakub.kumiega" class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
+                            <!--Twitter-->
+                            <a href="https://twitter.com/JKumiga?lang=pl" class="icons-sm tw-ic"><i class="fa fa-twitter"> </i></a>
+                            <!--Instagram-->
+                            <a href="https://www.instagram.com/kubakumiega/" class="icons-sm ins-ic"><i class="fa fa-instagram"> </i></a>
+
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
+                               
+                                <ul class="contact-icons">
+                                    <li><i class="fa fa-phone fa-2x"></i>
+                                        <p>+ 48 723 080 368</p>
+                                    </li>
+
+                                    <li><i class="fa fa-envelope fa-2x"></i>
+                                        <p>j.kumiega@icloud.com</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!--Grid column-->
 
     </div>
 
